--- a/index.html
+++ b/index.html
@@ -3,19 +3,41 @@
   <head>
     <meta charset="UTF-8" />
 
-    <link rel="icon" type="image/png" href="/favicon.png" />
+    <!-- Google Tag Manager -->
+    <script>
+      (function (w, d, s, l, i) {
+        w[l] = w[l] || [];
+        w[l].push({ "gtm.start": new Date().getTime(), event: "gtm.js" });
+        var f = d.getElementsByTagName(s)[0],
+          j = d.createElement(s),
+          dl = l != "dataLayer" ? "&l=" + l : "";
+        j.async = true;
+        j.src = "https://www.googletagmanager.com/gtm.js?id=" + i + dl;
+        f.parentNode.insertBefore(j, f);
+      })(window, document, "script", "dataLayer", "GTM-TL5T49MP");
+    </script>
 
+    <link rel="icon" type="image/png" href="/favicon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta
       name="description"
       content="At SixthSense Leadership, we understand that the future of every organization starts with its leaders; hence, We empower leaders to transform organizations and drive sustainable growth through innovative leadership development solutions."
     />
-
     <title>SixthSense - Empowering Leaders, Enabling Transformation</title>
-
     <meta property="og:image" content="/favicon.png" />
   </head>
   <body>
+    <!-- Google Tag Manager (noscript) -->
+    <!-- Google Tag Manager (noscript) -->
+    <noscript
+      ><iframe
+        src="https://www.googletagmanager.com/ns.html?id=GTM-TL5T49MP"
+        height="0"
+        width="0"
+        style="display: none; visibility: hidden"
+      ></iframe
+    ></noscript>
+
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
